# task.django-state-api

./: .gitignore  README.md  bot.py  gitignore  pyproject.toml
state_api/: manage.py
state_api/api/: serializers.py  tests.py  urls.py  views.py
state_api/state_api/: asgi.py  settings.py  urls.py  wsgi.py
state_api/states/: models.py
state_api/states/migrations/: 0001_initial.py
